<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Diary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="all_notes">All</string>
    <string name="visit_again">Visit</string>
    <string name="dont_visit">Don\'t visit</string>

    <string-array name="array_views">
        <item>All</item>
        <item>Visit</item>
        <item>Don\'t visit</item>
    </string-array>

    <string name="create_note">Create</string>
    <string name="title_activity_create_note">CreateNoteActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="noteTitle">Title</string>
    <string name="noteAddress">Address</string>
    <string name="noteDescription">Description</string>
    <string name="noteVisitAgain">Should visit again</string>
    <string name="noteDate">Date</string>
    <string name="title_activity_show_note">Show Note Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_note">Edit</string>
    <string name="note_delete">Delete</string>
    <string name="noteInfoTab">Information</string>
    <string name="noteMapTab">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="visitAgain">Should visit again</string>
    <string name="dontVisitAgain">Don\'t visit again</string>
    <string name="share">Share</string>
    <string name="selectImage">Select Image</string>
    <string name="detachImage">Detach Image</string>
    <string name="createNoteTitle">Create Note</string>

</resources>