<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".CreateNoteActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createNoteLayout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/noteTitleLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteTitle" />

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/noteTitle" />

        <TextView
            android:id="@+id/noteDateLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteAddress" />

        <EditText
            android:id="@+id/noteAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/noteDescriptionLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteDescription" />

        <EditText
            android:id="@+id/noteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/noteVisitAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteVisitAgain" />

        <TextView
            android:id="@+id/noteVisitLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteDate" />

        <DatePicker
            android:id="@+id/noteDate"
            android:layout_width="wrap_content"
            android:calendarViewShown="false"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/selectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onImageSelectClicked"
                android:text="@string/selectImage" />

            <Button
                android:id="@+id/detachImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onImageDetachClicked"
                android:text="@string/detachImage" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>